default/sonarr/sonarr-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonarr-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr

spec:
  rules:
  - host: "sonarr.donoso.family"
    http:
      paths:
      - backend:
          serviceName: sonarr
          servicePort: http
        path: /api
  tls:
  - hosts:
    - "sonarr.donoso.family"
